# sail

./: .clang-format  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  BENCHMARKS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  EXAMPLES.md  FAQ.md  FORMATS.md  LGPL-HEADER.h  LICENSE.INIH.txt  LICENSE.txt  README.md  TODO.md  common-declined.h  common.h  common_p-declined.h  config.h.in  plugin-layout-v1.h  plugin.h  vcpkg.json
bindings/c++/: CMakeLists.txt
bindings/c++/pkgconfig/: libsail-c++.pc.in
bindings/c++/src/: at_scope_exit-c++.h  context-c++.cpp  context-c++.h  image-c++.cpp  image-c++.h  image_reader-c++.cpp  image_reader-c++.h  image_writer-c++.cpp  image_writer-c++.h  io_common-c++.cpp  io_common-c++.h  plugin_info-c++.cpp  plugin_info-c++.h  read_features-c++.cpp  read_features-c++.h  read_options-c++.cpp  read_options-c++.h  sail-c++.cpp  sail-c++.h  utils-c++.cpp  utils-c++.h  write_features-c++.cpp  write_features-c++.h  write_options-c++.cpp  write_options-c++.h
examples/c/: CMakeLists.txt  advanced.c  deep_diver.c  junior.c  technical_diver.c
examples/c/sail/: CMakeLists.txt  sail.c
examples/c/sail-convert/: CMakeLists.txt  sail-convert.c
examples/c/sail-probe/: CMakeLists.txt  sail-probe.c
examples/c/sail-sdl-viewer/: CMakeLists.txt  sail-sdl-viewer.c
examples/qt/deep-diver/: CMakeLists.txt  qtsail.cpp  qtsail.ui
examples/qt/hacker/: CMakeLists.txt  main.cpp  qt-sail-demo-hacker.pro  qt-sail-demo-hardcore.pro  qtsail.cpp  qtsail.h  qtsail.rc  qtsail.ui  readoptions.h  readoptions.ui  writeoptions.cpp  writeoptions.h  writeoptions.ui
examples/qt/novice/: CMakeLists.txt  lsan  qt-sail-demo-novice.pro  qtsail.cpp  qtsail.h  qtsail.ui
src/bindings/c++/: CMakeLists.txt  abstract_io-c++.h  abstract_io_adapter-c++.cpp  abstract_io_adapter-c++.h  arbitrary_data-c++.h  at_scope_exit-c++.h  codec_info-c++.cpp  codec_info-c++.h  codec_options-c++.cpp  codec_options-c++.h  compression_level-c++.cpp  compression_level-c++.h  context-c++.cpp  context-c++.h  conversion_options-c++.cpp  conversion_options-c++.h  iccp-c++.cpp  iccp-c++.h  image-c++.cpp  image-c++.h  image_input-c++.cpp  image_input-c++.h  image_output-c++.cpp  image_output-c++.h  image_reader-c++.cpp  image_reader-c++.h  image_writer-c++.cpp  image_writer-c++.h  io_base-c++.cpp  io_base-c++.h  io_base_p-c++.h  io_common-c++.cpp  io_common-c++.h  io_common_p-c++.h  io_file-c++.cpp  io_file-c++.h  io_mem-c++.cpp  io_mem-c++.h  io_memory-c++.cpp  io_memory-c++.h  (+37 more)
src/bindings/sail-c++/: CMakeLists.txt  abstract_io.cpp  abstract_io.h  abstract_io_adapter.h  (+68 more)
src/libsail/: CMakeLists.txt  codec.c  codec.h  codec_bundle.c  codec_bundle.h  codec_bundle_node.c  codec_bundle_node.h  codec_bundle_node_private.c  codec_bundle_node_private.h  codec_bundle_private.c  codec_bundle_private.h  codec_info.c  codec_info.h  codec_info_node.c  codec_info_node.h  codec_info_private.c  codec_info_private.h  codec_layout.h  codec_priority.h  context.c  context.h  context_private.c  context_private.h  ini.c  ini.h  io_file.c  io_file.h  io_mem.c  io_mem.h  io_memory.c  io_memory.h  io_noop.c  io_noop.h  sail.h  sail_advanced.c  sail_advanced.h  sail_deep_diver.c  sail_deep_diver.h  sail_junior.c  sail_junior.h  (+12 more)
src/libsail-common/: CMakeLists.txt  codec_features.h  codec_options.c  codec_options.h  codec_options_p.h  common.h  common_serialize.c  common_serialize.h  compiler_specifics.h  compression_level.c  compression_level.h  error.h  export.h  hash_map.c  hash_map.h  hash_map_p.h  hash_set.c  hash_set.h  hash_set_p.h  iccp.c  iccp.h  image.c  image.h  io_common.c  io_common.h  linked_list_node.c  linked_list_node.h  load_features.c  load_features.h  load_options.c  load_options.h  log.c  log.h  memory.c  memory.h  meta_data.c  meta_data.h  meta_data_node.c  meta_data_node.h  palette.c  (+32 more)
src/libsail-manip/: CMakeLists.txt  cmyk.c  cmyk.h  conversion_options.c  conversion_options.h  convert.c  convert.h  convert_to_32.c  convert_to_32.h  convert_to_64.c  convert_to_64.h  manip_common.h  manip_utils.c  manip_utils.h  pixel_utils.h  sail-manip.h  ycbcr.c  ycbcr.h  ycck.c  ycck.h
src/sail-codecs/: CMakeLists.txt
src/sail-codecs-archive/: CMakeLists.txt  codec_info.c.in  codecs_objects_stub.c  enabled_codecs.c.in
src/sail-common/: CMakeLists.txt  common.h  common_serialize.c  common_serialize.h  compiler_specifics.h  compression_level.c  compression_level.h  export.h  hash_map.c  hash_map.h  hash_map_private.h  iccp.c  iccp.h  image.c  image.h  io_common.c  io_common.h  linked_list_node.c  linked_list_node.h  load_features.c  load_features.h  load_options.c  load_options.h  log.c  log.h  memory.c  memory.h  meta_data.c  meta_data.h  meta_data_node.c  meta_data_node.h  palette.c  palette.h  pixel.c  pixel.h  resolution.c  resolution.h  sail-common.h  save_features.c  save_features.h  (+14 more)
src/sail-plugins/: CMakeLists.txt
tests/: CMakeLists.txt
tests/images/: test-images.h.in
tests/manual/: test-conversion.cpp  test-conversion.sh  test-conversions.sh
tests/munit/: CMakeLists.txt  munit.h
tests/sail/: CMakeLists.txt  advanced-api.c  bugs.c  bytes_per_line.c  custom-io.c  deep-diver-api.c  edge-cases.c  iccp.c  integrity.c  io-expanding-buffer.c  io-file.c  io-memory.c  io-produce-same-images.c  malloc.c  meta_data_node.c  multi-frame.c  palette.c  read_options.c  technical-diver-api.c  threading-stress.c  threading.c  vector.c  write_options.c
tests/sail-common/: CMakeLists.txt  binary_compatibility.c  bytes_per_line.c  codec_options.c  compare_pixel_sizes.c  hash_map.c  hash_set.c  hex_data.c  iccp.c  integrity.c  io_common.c  load_options.c  log.c  malloc.c  meta_data.c  meta_data_node.c  palette.c  read_options.c  save_options.c  utils.c  variant.c  vector.c  write_options.c
tests/sail-comparators/: CMakeLists.txt  sail-comparators.c  sail-comparators.h
tests/sail-dump/: CMakeLists.txt  sail-dump-app.c  sail-dump.c  sail-dump.h
tests/sail-manip/: CMakeLists.txt  closest-conversion.c  format-conversion.c  indexed-conversion.c  pixel-conversions.c  rotate.c  scale.c
tools/: CMakeLists.txt  sail.c
(+797 files in other folders)
